--- a/index.html
+++ b/index.html
@@ -12,38 +12,46 @@
 </head>
 <body>
     <head>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-black  " >
-            <div class="container-fluid">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark bg-gradient " >
+            <div class="container-fluid ">
+            
+              <div class="collapse navbar-collapse justify-content-around  fs-4 "  id="navbarSupportedContent">
                 <a class="navbar-brand" href="#">
-                    <img src="/img/Logo negro.jpg" alt="Logo" width="400" height="100" class="d-inline-block align-text-top">
+                  <img src="/img/logoF.png" alt="Logo" width="250" height="110" class="d-inline-block align-text-top">
                   </a>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav ">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" href="#">Inicio</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
+                    <a class="nav-link" href="#">Vinos</a>
                   </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Dropdown
+                      Categorias
                     </a>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
+                      <li><a class="dropdown-item" href="#">Vino Blanco</a></li>
+                      <li><a class="dropdown-item" href="#">vino Tinto</a></li>
                       <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                      <li><a class="dropdown-item" href="#">Vino Rosado</a></li>
                     </ul>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link disabled">Disabled</a>
-                  </li>
+                  <li class="nav-item ">
+                    <a class="nav-link " href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Contacto
+                    </a>
+                    </li>
+                    <li class="nav-item ">
+                      <a class="nav-link " href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Nosotros
+                      </a>
+                      </li> 
+                      <li class="nav-item">
+                        <a class="nav-link" href="#"><img src="/img/carrito-de-compras-blanco.png" alt="Carrito de compras" width="35" height="35"></a>
+                      </li>
                 </ul>
-                <form class="d-flex" role="search">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
+                
               </div>
             </div>
           </nav>
