--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/CSS/Styless.css">
     <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <!-- JavaScript Bundle with Popper -->
@@ -57,6 +58,26 @@
           </nav>
     </head>
     <main></main>
-    <footer></footer>
+    <footer>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark bg-gradient justify-content-around ">
+      <ul class="navbar-nav flex-column ">
+        <li class="nav-item">
+          <a class="nav-link" href="#">Vinos</a>
+        </li>
+        <li class="nav-item ">
+          <a class="nav-link " href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Contacto
+          </a>
+          </li>
+          <li class="nav-item ">
+            <a class="nav-link " href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Nosotros
+            </a>
+            </li> 
+            
+      </ul>
+           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d107122.38185809464!2d-68.75747770144187!3d-32.96224342965601!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x967e09452c65a90b%3A0x9c458f7ff07ddbb4!2sEstancia%20Mendoza!5e0!3m2!1ses-419!2sar!4v1666360072336!5m2!1ses-419!2sar" width="400" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+           <p>Pagina creada por el  ©Grupo 1 Codo a Codo</p>
+    </nav></footer>
 </body>
 </html>
