"agrego form y productos dinamicos"

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- CSS only -->
+ <link rel="stylesheet" href="./CSS/Styless.css">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -79,8 +80,79 @@
       </nav>
     </head>
     <main>
-      <!-- contact-form -->
+
+      <section class="productos-header">
+        <h1>Nuestros vinos</h1>
+        <button type="button" id="Tinto" class="btn btn-dark btn-vinos">
+          Tinto
+        </button>
+        <button type="button" id="Rosado" class="btn btn-dark btn-vinos">
+          Rosado
+        </button>
+        <button type="button" id="Blanco" class="btn btn-dark btn-vinos">
+          Blanco
+        </button>
+      </section>
+
+      <section class="container">
+      <div class="row mt-4 mb-3">
+
+      </div>
+      
+
+      </section>
+
+      <!-- ////////////////////////////////////////////////////////////////////////////////// -->
+      <section class="contacto">
+        <div class="row">
+          <div class="col-md-12 col-sm-12">
+          <form action="#" class="back">
+            <input
+              type="text"
+              class="form-control mb-2"
+              name=""
+              id=""
+              placeholder="Nombre"
+              onchange="none"
+            />
+            <input
+              type="text"
+              class="form-control mb-2"
+              name=""
+              id=""
+              placeholder="Apellido"
+            />
+            <input
+              type="email"
+              class="form-control mb-2"
+              name=""
+              id=""
+              placeholder="email@ejemplo.com"
+            />
+            <input
+              type="tel"
+              class="form-control mb-2"
+              name=""
+              id=""
+              placeholder="Telefono"
+            />
+            <textarea
+              class="form-control mb-2"
+              name=""
+              id=""
+              cols="30"
+              rows="10"
+              placeholder="Hacenos una consulta..."
+            ></textarea>
+            <button type="button" class="btn btn-dark enviar">
+              Enviar consulta
+            </button>
+        </div>
+          </form>
+        </div>
+      </section>
     </main>
     <footer></footer>
+    <script src="./JS/index.js"></script>
   </body>
 </html>
