--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       </section>
 
       <!-- ////////////////////////////////////////////////////////////////////////////////// -->
-      <section class="contacto">
+      <section class="contacto mb-4">
         <div class="row">
           <div class="col-md-12 col-sm-12">
           <form action="#" class="back">
