'seguimos mejorando el filter'

--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
 
       <section class="productos-header">
         <h1>Nuestros vinos</h1>
+        <button type="button" id="all" class="btn btn-dark btn-vinos">
+          Todos nuestros vinos
+        </button>
         <button type="button" id="Tinto" class="btn btn-dark btn-vinos">
           Tinto
         </button>
