--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
       crossorigin="anonymous"
     ></script>
+   
     <title>Vinoteca G1</title>
   </head>
   <body>
@@ -106,7 +107,8 @@
     </head>
     <main >
       
-        <section class="productos-header">
+        <section class="productos-header col-md-12 ">
+          <div class="container-fluid col-md-8 justify-content-center">
           <h1>Nuestros vinos</h1>
           <button type="button" id="all" class="btn btn-dark btn-vinos">
             Todos nuestros vinos
@@ -120,6 +122,7 @@
           <button type="button" id="Blanco" class="btn btn-dark btn-vinos">
             Blanco
           </button>
+        </div>
         </section>
   
         <section class="container">
@@ -178,5 +181,6 @@
         
       </nav>
     </footer>
+    <script src="/JS/index.js"></script>
 </body>
 </html>
