--- a/contacto.html
+++ b/contacto.html
@@ -22,7 +22,7 @@
     ></script>
   </head>
   <body>
-    <head>
+    <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark bg-gradient">
           <div class="container-fluid">
             <a class="navbar-brand" href="index.html">
@@ -91,7 +91,7 @@
                   </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#"
+                  <a class="nav-link" href="carrito.html"
                     ><img
                       src="/img/carrito-de-compras-blanco.png"
                       alt="Carrito de compras"
@@ -103,7 +103,7 @@
             </div>
           </div>
         </nav>
-      </head>
+      </header>
 <main>
     <section class="contacto mb-4 ">
         <div class="row">
