--- a/carrito.html
+++ b/carrito.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-   <!-- Css propio -->
+    <!-- Css propio -->
     <link rel="stylesheet" href="./css/style.css" />
-   <!-- Bootstrap -->
+    <!-- Bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -19,22 +19,33 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark bg-gradient">
         <div class="container-fluid">
+          <a class="navbar-brand" href="index.html">
+            <img
+              src="/img/logoF.png"
+              alt="Logo"
+              width="250"
+              height="110"
+              class="d-inline-block align-text-top"
+            />
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
           <div
-            class="collapse navbar-collapse justify-content-around fs-4"
+            class="collapse navbar-collapse justify-content-end fs-4"
             id="navbarSupportedContent"
           >
-            <a class="navbar-brand" href="../index.html">
-              <img
-                src="/img/logoF.png"
-                alt="Logo"
-                width="250"
-                height="110"
-                class="d-inline-block align-text-top"
-              />
-            </a>
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="../index.html"
+                <a class="nav-link active" aria-current="page" href="index.html"
                   >Inicio</a
                 >
               </li>
@@ -54,20 +65,19 @@
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="#">Vino Blanco</a></li>
                   <li><a class="dropdown-item" href="#">vino Tinto</a></li>
-                  <li><hr class="dropdown-divider" /></li>
+                  <li>
+                    <hr class="dropdown-divider" />
+                  </li>
                   <li><a class="dropdown-item" href="#">Vino Rosado</a></li>
                 </ul>
               </li>
               <li class="nav-item">
                 <a
-                  class="nav-link"
-                  href="#"
-                  role="button"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="false"
+                  class="nav-link active"
+                  aria-current="page"
+                  href="contacto.html"
+                  >Contacto</a
                 >
-                  Contacto
-                </a>
               </li>
               <li class="nav-item">
                 <a
@@ -81,7 +91,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./carrito.html"
+                <a class="nav-link" href="carrito.html"
                   ><img
                     src="/img/carrito-de-compras-blanco.png"
                     alt="Carrito de compras"
@@ -94,29 +104,31 @@
         </div>
       </nav>
     </header>
-    <main class="main">            
-        <div class="card text-center">
-            <div class="card-header bg-dark bg-gradient">
-              <ul class="nav nav-tabs card-header-tabs">
-                <li class="nav-item">
-                  <a class="nav-link carrito" href="#">Carrito</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link  carrito" href="#">Guardado</a>
-                </li>
-              </ul>
-            </div>
-            <div class="card-body">
-              <h5 class="card-title">Tu carrito esta vacio</h5>
-              <a href="#" class="btn btn-dark bg-gradient">Comprar</a>
-              <a href="#" class="btn btn-dark bg-gradient">Limpiar carrito</a>
-            </div>
+    <main class="main">
+      <div class="card text-center">
+        <div class="card-header bg-dark bg-gradient">
+          <ul class="nav nav-tabs card-header-tabs">
+            <li class="nav-item">
+              <a class="nav-link carrito" href="#">Carrito</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link carrito" href="#">Guardado</a>
+            </li>
+          </ul>
         </div>
+        <div class="card-body">
+          <h5 class="card-title">Tu carrito esta vacio</h5>
+          <a href="#" class="btn btn-dark bg-gradient">Comprar</a>
+          <a href="#" class="btn btn-dark bg-gradient">Limpiar carrito</a>
+        </div>
+      </div>
 
-          <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-    crossorigin="anonymous"></script>
+      <!-- JavaScript Bundle with Popper -->
+      <script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+        crossorigin="anonymous"
+      ></script>
     </main>
     <footer>
       <nav
