--- a/carrito.html
+++ b/carrito.html
@@ -19,7 +19,7 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark bg-gradient">
         <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">
+          <a class="navbar-brand ms-4" href="index.html">
             <img
               src="/img/logoF.png"
               alt="Logo"
@@ -52,25 +52,7 @@
               <li class="nav-item">
                 <a class="nav-link" href="#">Vinos</a>
               </li>
-              <li class="nav-item dropdown">
-                <a
-                  class="nav-link dropdown-toggle"
-                  href="#"
-                  role="button"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="false"
-                >
-                  Categorias
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Vino Blanco</a></li>
-                  <li><a class="dropdown-item" href="#">vino Tinto</a></li>
-                  <li>
-                    <hr class="dropdown-divider" />
-                  </li>
-                  <li><a class="dropdown-item" href="#">Vino Rosado</a></li>
-                </ul>
-              </li>
+             
               <li class="nav-item">
                 <a
                   class="nav-link active"
@@ -90,7 +72,26 @@
                   Nosotros
                 </a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="#"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  Categorias
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">Vino Blanco</a></li>
+                  <li><a class="dropdown-item" href="#">vino Tinto</a></li>
+                  <li>
+                    <hr class="dropdown-divider" />
+                  </li>
+                  <li><a class="dropdown-item" href="#">Vino Rosado</a></li>
+                </ul>
+              </li>
+              <li class="nav-item me-4">
                 <a class="nav-link" href="carrito.html"
                   ><img
                     src="/img/carrito-de-compras-blanco.png"
@@ -170,7 +171,7 @@
           loading="lazy"
           referrerpolicy="no-referrer-when-downgrade"
         ></iframe>
-        <p>Pagina creada por el ©Grupo 1 Codo a Codo</p>
+       
       </nav>
     </footer>
   </body>
