--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
   <body>
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark bg-gradient">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">
+        <div class="container-fluid ">
+          <a class="navbar-brand ms-4" href="index.html">
             <img
               src="/img/logoF.png"
               alt="Logo"
@@ -59,25 +59,7 @@
               <li class="nav-item">
                 <a class="nav-link" href="#">Vinos</a>
               </li>
-              <li class="nav-item dropdown">
-                <a
-                  class="nav-link dropdown-toggle"
-                  href="#"
-                  role="button"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="false"
-                >
-                  Categorias
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Vino Blanco</a></li>
-                  <li><a class="dropdown-item" href="#">vino Tinto</a></li>
-                  <li>
-                    <hr class="dropdown-divider" />
-                  </li>
-                  <li><a class="dropdown-item" href="#">Vino Rosado</a></li>
-                </ul>
-              </li>
+             
               <li class="nav-item">
                 <a
                   class="nav-link active"
@@ -97,7 +79,26 @@
                   Nosotros
                 </a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="#"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  Categorias
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">Vino Blanco</a></li>
+                  <li><a class="dropdown-item" href="#">vino Tinto</a></li>
+                  <li>
+                    <hr class="dropdown-divider" />
+                  </li>
+                  <li><a class="dropdown-item" href="#">Vino Rosado</a></li>
+                </ul>
+              </li>
+              <li class="nav-item me-4">
                 <a class="nav-link" href="carrito.html"
                   ><img
                     src="/img/carrito-de-compras-blanco.png"
@@ -114,7 +115,7 @@
     <main>
       <div
         id="carouselExampleControls"
-        class="carousel slide mt-3"
+        class="carousel slide mt-3 "
         data-bs-ride="carousel"
       >
         <div class="carousel-inner">
