"agrego img-fluid al carousel"

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
           <div class="carousel-item active">
             <img
               src="./img/Vinocarta.png"
-              class="rounded mx-auto d-block"
+              class="rounded mx-auto d-block img-fluid"
               alt="vino"
             />
             <div class="carousel-caption d-none d-md-block">
@@ -178,7 +178,7 @@
           <div class="carousel-item">
             <img
               src="./img/Vinocarta.png"
-              class="rounded mx-auto d-block"
+              class="rounded mx-auto d-block img-fluid"
               alt="vino"
             />
             <div class="carousel-caption d-none d-md-block">
@@ -192,7 +192,7 @@
           <div class="carousel-item">
             <img
               src="./img/Vinocarta.png"
-              class="rounded mx-auto d-block"
+              class="rounded mx-auto d-block img-fluid"
               alt="vino"
             />
             <div class="carousel-caption d-none d-md-block">
