--- a/index.html
+++ b/index.html
@@ -220,6 +220,41 @@
       </section>
 
       <!-- ////////////////////////////////////////////////////////////////////////////////// -->
+      <section class="about">
+        <div class="row">
+          <div class="col-sm-12 col-lg-7">
+            <img
+              src="./img/VinoFondo.jpg"
+              class="img-fluid"
+              alt="imagen de bodega"
+            />
+          </div>
+          <div class="col-sm-12 col-lg-5">
+            <h2>Conozca nuestra historia:</h2>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              Doloribus tenetur eligendi dolore adipisci. Sapiente nostrum enim
+              voluptatibus soluta nisi labore, ducimus modi eaque, laudantium
+              itaque, veritatis atque consectetur molestias ut. Lorem, ipsum
+              dolor sit amet consectetur adipisicing elit. Doloribus tenetur
+              eligendi dolore adipisci. Sapiente nostrum enim voluptatibus
+              soluta nisi labore, ducimus modi eaque, laudantium itaque,
+              veritatis atque consectetur molestias ut. Lorem, ipsum dolor sit
+              amet consectetur adipisicing elit. Doloribus tenetur eligendi
+              dolore adipisci. Sapiente nostrum enim voluptatibus soluta nisi
+              labore, ducimus modi eaque, laudantium itaque, veritatis atque
+              consectetur molestias ut. Lorem, ipsum dolor sit amet consectetur
+              adipisicing elit. Doloribus tenetur eligendi dolore adipisci.
+              Sapiente nostrum enim voluptatibus soluta nisi labore, ducimus
+              modi eaque, laudantium itaque, veritatis atque consectetur
+              molestias ut. Lorem, ipsum dolor sit amet consectetur adipisicing
+              elit. Doloribus tenetur eligendi dolore adipisci. Sapiente nostrum
+              enim voluptatibus soluta nisi labore, ducimus modi eaque,
+              laudantium itaque, veritatis atque consectetur molestias ut.
+            </p>
+          </div>
+        </div>
+      </section>
     </main>
     <footer>
       <nav
