--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
           <div class="carousel-item active">
             <img
               src="./img/Vinocarta.png"
-              class="rounded mx-auto d-block"
+              class="rounded mx-auto d-block img-fluid"
               alt="vino"
             />
             <div class="carousel-caption d-none d-md-block">
@@ -136,7 +136,7 @@
           <div class="carousel-item">
             <img
               src="./img/Vinocarta.png"
-              class="rounded mx-auto d-block"
+              class="rounded mx-auto d-block img-fluid"
               alt="vino"
             />
             <div class="carousel-caption d-none d-md-block">
@@ -150,7 +150,7 @@
           <div class="carousel-item">
             <img
               src="./img/Vinocarta.png"
-              class="rounded mx-auto d-block"
+              class="rounded mx-auto d-block img-fluid"
               alt="vino"
             />
             <div class="carousel-caption d-none d-md-block">
