"termino el filtrado por clase de vino"

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
       </section>
 
       <section class="container">
-        <div class="row mt-4 mb-3"></div>
+        <div id="productos-card" class="row mt-4 mb-3"></div>
       </section>
 
       <!-- ////////////////////////////////////////////////////////////////////////////////// -->
