--- a/carrito.html
+++ b/carrito.html
@@ -45,7 +45,7 @@
           >
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html"
+                <a class="nav-link" aria-current="page" href="index.html"
                   >Inicio</a
                 >
               </li>
@@ -55,7 +55,7 @@
              
               <li class="nav-item">
                 <a
-                  class="nav-link active"
+                  class="nav-link"
                   aria-current="page"
                   href="contacto.html"
                   >Contacto</a
