--- a/contacto.html
+++ b/contacto.html
@@ -51,7 +51,7 @@
             >
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/index.html"
+                  <a class="nav-link" aria-current="page" href="/index.html"
                     >Inicio</a
                   >
                 </li>
@@ -105,7 +105,7 @@
         </nav>
       </header>
 <main>
-    <section class="contacto mb-4 ">
+    <section id="body-contacto" class="contacto mb-4 ">
         <div class="row">
           <div class="col-md-12 col-sm-12">
           <form action="#" class="back">
