Arregle la seccion about us

--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
           <img src="./img/VinoFondo.jpg" class="img-fluid" alt="imagen de bodega" />
         </div>
         <div class="col-sm-12 col-lg-5">
-          <h2>Conozca nuestra historia:</h2>
-          <p>
+          <h2 class="about-text">Conozca nuestra historia:</h2>
+          <p class="about-text">
             Lorem, ipsum dolor sit amet consectetur adipisicing elit.
             Doloribus tenetur eligendi dolore adipisci. Sapiente nostrum enim
             voluptatibus soluta nisi labore, ducimus modi eaque, laudantium
