--- a/carrito.html
+++ b/carrito.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Css propio -->
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/Styles.css" />
     <!-- Bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
@@ -49,10 +49,7 @@
                   >Inicio</a
                 >
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Vinos</a>
-              </li>
-             
+
               <li class="nav-item">
                 <a
                   class="nav-link active"
@@ -61,36 +58,7 @@
                   >Contacto</a
                 >
               </li>
-              <li class="nav-item">
-                <a
-                  class="nav-link"
-                  href="#"
-                  role="button"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="false"
-                >
-                  Nosotros
-                </a>
-              </li>
-              <li class="nav-item dropdown">
-                <a
-                  class="nav-link dropdown-toggle"
-                  href="#"
-                  role="button"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="false"
-                >
-                  Categorias
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Vino Blanco</a></li>
-                  <li><a class="dropdown-item" href="#">vino Tinto</a></li>
-                  <li>
-                    <hr class="dropdown-divider" />
-                  </li>
-                  <li><a class="dropdown-item" href="#">Vino Rosado</a></li>
-                </ul>
-              </li>
+
               <li class="nav-item me-4">
                 <a class="nav-link" href="carrito.html"
                   ><img
@@ -171,7 +139,6 @@
           loading="lazy"
           referrerpolicy="no-referrer-when-downgrade"
         ></iframe>
-       
       </nav>
     </footer>
   </body>
