--- a/index.html
+++ b/index.html
@@ -4,7 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/CSS/Styless.css" />
+    <link rel="stylesheet" href="/CSS/Styles.css" />
+    <!-- favicon icons -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+      integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+
     <!-- CSS only -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
@@ -56,9 +65,6 @@
                   >Inicio</a
                 >
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Vinos</a>
-              </li>
 
               <li class="nav-item">
                 <a
@@ -69,35 +75,12 @@
                 >
               </li>
               <li class="nav-item">
-                <a
-                  class="nav-link"
-                  href="#"
-                  role="button"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="false"
-                >
-                  Nosotros
-                </a>
+                <a class="nav-link" href="#nosotros"> Nosotros </a>
               </li>
-              <li class="nav-item dropdown">
-                <a
-                  class="nav-link dropdown-toggle"
-                  href="#"
-                  role="button"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="false"
-                >
-                  Categorias
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Vino Blanco</a></li>
-                  <li><a class="dropdown-item" href="#">vino Tinto</a></li>
-                  <li>
-                    <hr class="dropdown-divider" />
-                  </li>
-                  <li><a class="dropdown-item" href="#">Vino Rosado</a></li>
-                </ul>
+              <li class="nav-item">
+                <a class="nav-link" href="log.html"> Ingresar </a>
               </li>
+
               <li class="nav-item me-4">
                 <a class="nav-link" href="carrito.html"
                   ><img
@@ -211,6 +194,10 @@
             >
               Blanco
             </button>
+            <button><i id="sort-up" class="fa-solid fa-sort-up"></i></button>
+            <button>
+              <i id="sort-down" class="fa-solid fa-sort-down"></i>
+            </button>
           </div>
         </div>
       </section>
@@ -230,7 +217,7 @@
             />
           </div>
           <div class="col-sm-12 col-lg-5">
-            <h2>Conozca nuestra historia:</h2>
+            <h2 id="nosotros">Conozca nuestra historia:</h2>
             <p>
               Lorem, ipsum dolor sit amet consectetur adipisicing elit.
               Doloribus tenetur eligendi dolore adipisci. Sapiente nostrum enim
